// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render SignIn with default data correctly 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <form
      onSubmit={[Function]}
    >
      <h1
        className="box-layout__title"
      >
         Sign In
      </h1>
      <div>
        <input
          autoFocus={true}
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Email"
          type="email"
          value=""
        />
      </div>
      <div>
        <input
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Password"
          type="password"
          value=""
        />
      </div>
      <div>
        <button
          className="button button__space"
        >
          Login with Credential
        </button>
        <div
          className="box-layout__error"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`should set email on input change 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <form
      onSubmit={[Function]}
    >
      <h1
        className="box-layout__title"
      >
         Sign In
      </h1>
      <div>
        <input
          autoFocus={true}
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Email"
          type="email"
          value="adebarakhadijat@gmail.com"
        />
      </div>
      <div>
        <input
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Password"
          type="password"
          value=""
        />
      </div>
      <div>
        <button
          className="button button__space"
        >
          Login with Credential
        </button>
        <div
          className="box-layout__error"
        />
      </div>
    </form>
  </div>
</div>
`;

exports[`should set password on input change 1`] = `
<div
  className="box-layout"
>
  <div
    className="box-layout__box"
  >
    <form
      onSubmit={[Function]}
    >
      <h1
        className="box-layout__title"
      >
         Sign In
      </h1>
      <div>
        <input
          autoFocus={true}
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Email"
          type="email"
          value=""
        />
      </div>
      <div>
        <input
          className="text-input text-input__extend"
          onChange={[Function]}
          placeholder="Enter Password"
          type="password"
          value="123abc"
        />
      </div>
      <div>
        <button
          className="button button__space"
        >
          Login with Credential
        </button>
        <div
          className="box-layout__error"
        />
      </div>
    </form>
  </div>
</div>
`;
